--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html data-style lang="gr" data-dw-cb="20240212-01-021" class="js-yes">
 
 <head>
-	<script src="js/5538GR01_0v7.js"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -1281,7 +1280,7 @@ font-weight: 500;    transition: all .3s ease;
 				font-weight: bold;
 				color: black;
 			  ">
-					Παραγγείλετε το <a href="#form"></a><a href="#form">Joint Balm</a>! <br>
+					Παραγγείλετε το <a href="#form">Joint Balm</a>! <br>
 				</h4>
 
 			</div>
@@ -1326,8 +1325,7 @@ font-weight: 500;    transition: all .3s ease;
 						<center><label class="inp_name">Όνομα</label></center>
 						<input name="name" placeholder="" required="required" type="text" autocomplete="name">
 						
-						<center><label class="inp_phone">Τηλέφωνο (ενεργό κινητό)
-						</label></center>
+						<center><label class="inp_phone">Τηλέφωνο (ενεργό κινητό)</label></center>
 						<input name="phone" placeholder="" required="required" type="tel" id="phone" autocomplete="tel">
 						
 						<input name="subid" type="hidden" value="{subid}">
