--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 
 	<!-- PRELOAD FONTS -->
-	<link rel="preload" href="https://assets.ilgcdn.com/fonts/DarkmodeVF_W_WghtDrkm.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="https://assets.ilgcdn.com/fonts/Calluna-Regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/DarkmodeVF_W_WghtDrkm.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/Calluna-Regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
 
 	<!-- FONT AWESOME -->
-	<link rel="preload" href="https://assets.ilgcdn.com/fa-20231020-01/webfonts/fa-light-300.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="https://assets.ilgcdn.com/fa-20231020-01/webfonts/fa-regular-400.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="https://assets.ilgcdn.com/fa-20231020-01/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin>
-	<link rel="preload" href="https://assets.ilgcdn.com/fa-20231020-01/webfonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/fa-light-300.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/fa-regular-400.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin>
+	<link rel="preload" href="fonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin>
 
 	<!-- FAVICON -->
 	<link rel="icon" href="images/favicon.png" sizes="any" type="image/png">
