Updated text and images

--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
 					σωτηρίας.".</b></p>
 		</div>
 		<div class="ctContent">
-			<div class="oneImageWidget__wrapper oneImageWidget__wrapper--504681"><img class="oneImageWidget__img oneImageWidget__img--898337" src="images/image-1845-1705935865944.webp" alt="image" draggable="false"></div>
+			<div class="oneImageWidget__wrapper oneImageWidget__wrapper--504681"><img class="oneImageWidget__img oneImageWidget__img--898337" src="images/image-1845-1705935865944.jpg" alt="image" draggable="false"></div>
 		</div>
 		<div class="ctContent">
 			<p class="knifeText">
@@ -833,7 +833,7 @@ font-weight: 500;    transition: all .3s ease;
 			<div class="knifeText"><span class="knifeText--589533">Βεβαιωθείτε ότι έχετε ελέγξει τον εαυτό σας για αυτά
 					τα συμπτώματα:</span><br>
 				<span class="knifeText--557431">
-					<li class="list-1">Πόνος ή δυσκαμψία στις αρθρώσεις..</li>
+					<li class="list-1">Πόνος ή δυσκαμψία στις αρθρώσεις.</li>
 					<li class="list-1">Πόνος στην πλάτη όταν σκύβετε.</li>
 					<li class="list-1">Πρωινή δυσκαμψία.</li>
 					<li class="list-1">Τριγμός ή κλικ στις αρθρώσεις.</li>
